# erebor-backend

./: Cargo.toml
src/: cors.rs  httpclient.rs  lib.rs  main.rs  moria.rs  repository.rs  scheduler.rs  timetable.rs
src/timetable/: api.rs  repository.rs  scheduler.rs
src/timetable/repository/: inmemory.rs  sqlite.rs
src/timetable/repository/sqlite/: load.rs  persist.rs
