[package]
name = "erebor-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "0.8"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.2"
warp = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.9"